# PiHeld

./: LICENSE.md  README.md
doc/: README.md
hardware/: README.md
hardware/cartridge_pcb/: .gitignore  README.md  cartridge_breakout.brd  cartridge_breakout.sch  cartridge_pcb.brd  cartridge_pcb.sch
hardware/cartridge_pcb/libs/: README.md
hardware/cartridge_pcb/simulations/: README.md
hardware/cartridge_pcb/simulations/i2c_level_shifter/: mosfets_n-channel_n-channel-31v-99v.txt  simulation.asc  simulation.plt
hardware/cartridge_pcb/simulations/save_shutdown/: save_shutdown.asc  save_shutdown.plt
software/: .gitignore
software/code/: CMakeLists.txt  LICENSE  README.md  clear_build.sh  setup.sh
software/code/cmake/: FindWiringPi.cmake
software/code/src/: Cartridge.cpp  Cartridge.hpp  GPIO.cpp  GPIO.hpp  MCP23017.cpp  MCP23017.hpp  build_test.sh  datatypes.h  format.hpp  main.cpp  test.cpp
software/utilities/: .gitignore  LiPo.py  SaveShutdown.py  ads1015_helper.py  config.txt  rc.local  requirements.txt  setup.sh
tests/: LICENSE.md  README.md  check.sh
tests/cartridge_pin_tester/input_tester/: .gitignore  build.sh  main.cpp  setup.sh
tests/cartridge_pin_tester/input_tester/arduino/: arduino.ino
tests/cartridge_pin_tester/output_tester/: .gitignore  build.sh  main.cpp  setup.sh
tests/debug_cartridge/: README.md
tests/debug_cartridge/debug_cartridge_mega/: gameboy.brd  gameboy.sch
tests/debug_cartridge/debug_cartridge_wire/: gameboy.brd  gameboy.sch
tests/roms/: .gitignore  4000steps.c  build_4000steps.sh  compare.py
(+4 files in other folders)
